--- a/.github/workflows/productionDeploy.yml
+++ b/.github/workflows/productionDeploy.yml
@@ -102,13 +102,13 @@ jobs:
         # # The following git cmd adds remote https://github.com/newrelic/newrelic-ios-agent-spm.
         # # The subsequent git commands push the Package.swift up to that repo. URL is prepended with GHA PAT.
 
-        git remote add origin ${{ secrets.PROD_SPM_URL }}
-        git remote -v
+        git remote add spm ${{ secrets.PROD_SPM_URL }}
+        git ls-remote --tags spm
 
         # git add Package.swift
         # git commit -m "Added build ${{ env.version }}"
         # git tag ${{ env.version }}
-        # git push origin main --tags
+        # git push spm main --tags
 
      # At this point we have NewRelicAgent.podspec and Package.swift corresponding to the production build sitting at the repo root.
      # The following step creates a PR containing that new NewRelicAgent.podspec and Package.swift file at the root of the repo.
