--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,6 @@ jobs:
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-latest 
-    outputs:
-      coverageXMLPath: ${{ steps.setCoverageXMLPath.outputs.coverageXMLPath }}
     steps:
     - uses: actions/checkout@master
       with: 
@@ -31,16 +29,13 @@ jobs:
     - name: Install gems
       run: bundle install
 
-    - id: setCoverageXMLPath
-      name: Run tests on iOS (using fastlane)
-      run: | 
-        bundle exec fastlane runIOSTests
-        echo coverageXMLPath=${BUILT_PRODUCTS_DIR}/lcov/coverage.xml >> $GITHUB_OUTPUT
+    - name: Run tests on iOS (using fastlane)
+      run: bundle exec fastlane runIOSTests
 
     - uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: ${{ steps.setCoverageXMLPath.outputs.coverageXMLPath }}
+        files: coverage.xml
 
   testTVOS:
     name : TestTVOS
