--- a/.github/workflows/testRepoPush.yml
+++ b/.github/workflows/testRepoPush.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: newrelic/newrelic-ios-agent-spm
-        token: ${{ secrets.SPM_PAT }} # `GH_PAT` is a secret that contains your PAT
+        token: ${{ secrets.SPM_PAT }}
         path: spm
 
     - name: Create Prod Podspec for XCFramework version
@@ -47,14 +47,22 @@ jobs:
         rm Package.swift-e
         rm Package.swiftbak
 
-        echo "testtesttest" > myLog.log
+        git checkout -B testPackageSwift
 
-        git checkout -B testMyLog
+        git add Package.swift
+        git commit -m "Added test"
+        
+        git tag "testPackageSwiftTag"   
+        
+        git push origin testPackageSwift --tags
 
-        git add myLog.log
-        git commit -m "Added myLog"
-        
-        git tag "testTag"   
-        
-        git push origin testMyLog --tags
+        cp Package.swift ../main/
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3
+      with:
+        path: main
+        title: "Test Test"
+        branch: "auto-production-release-test"
+        base: main
 
