--- a/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
+++ b/Test Harness/NRTestApp/NRTestApp/NRAPIInfo.plist
@@ -6,6 +6,8 @@
 	<string></string>
 	<key>collectorAddress</key>
 	<string></string>
+	<key>logAddress</key>
+	<string></string>
 	<key>isStaging</key>
 	<false/>
 	<key>NRAPIKey</key>
