--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,10 @@ jobs:
     
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '14.1'
+        xcode-version: '14.2'
+
+    - name: Install lcov
+      run: brew install lcov
 
     - name: Install gems
       run: bundle install
