--- a/Test Harness/NRTestApp/NRTestApp/Info.plist
+++ b/Test Harness/NRTestApp/NRTestApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>CFBundleIdentifier</key>
 	<string>Submitting your Mac apps to the App Store</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
