--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,6 +108,13 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        
+    - name: Upload build reports
+      if: failure() && steps.build-step.outcome != 'success'
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-reports
+        path: plugins/gradle/build/reports/
 
   # Create NewRelicAgent.podspec & Package.swift with new version number and checksum.
   deployStagingSpecs:
