--- a/Test Harness/NRTestApp/NRAPI-Info.plist
+++ b/Test Harness/NRTestApp/NRAPI-Info.plist
@@ -6,7 +6,7 @@
 	<string></string>
 	<key>collectorAddress</key>
 	<string></string>
-	<key>logAddress</key>
+	<key>logIngestKey</key>
 	<string></string>
 	<key>NRAPIKey</key>
 	<string></string>
